# vip-smur.github.io

./: .conda_path  .gitignore  404.html  Dockerfile  README.md  build_image.command  build_image.sh  env.template  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  index.html  mkdocs.yml  netlify.toml  pyproject.toml  repo.code-workspace  requirements.txt  run_serve.bat  serve-docker.bat  serve-docker.command  serve-docker.sh  serve.bat  serve.sh  sitemap.xml
.Jules/: palette.md
24fa-energyinbuildings-com/: index.html
24fa-energyinbuildings-res/: index.html
24fa-microclimate-lstm-kriging/: index.html
24fa-microclimate-umcf/: index.html
24fa-microclimate-uwg/: index.html
24fa-mobility-pei/: index.html
24fa-mponc/: index.html
24fa-neuroarchitecture/: index.html
24sp-energyinbuildings/: index.html
24sp-microclimate/: index.html
24sp-mobility-1/: index.html
24sp-mobility-2/: index.html
24sp-mobility-pei/: index.html
24sp-mobility-seg/: index.html
25fa-energyinbuildings/: index.html
25fa-medialaxis/: index.html
25fa-medialaxistransformation/: index.html
25fa-microclimate-ml/: index.html
25fa-microclimate-outdoorplus/: index.html
25fa-microclimate-umcf/: index.html
25fa-mobility/: index.html
25fa-mponc/: index.html
25sp-energyinbuildings/: index.html
25sp-microclimate-lstm-kriging/: index.html
25sp-microclimate-umcf/: index.html
25sp-mobility-pei/: index.html
25sp-mponc/: index.html
25sp-neuroarchitecture/: final_keywords(filtered).py  final_keywords_with_categories (unfiltered).py  (+5 more)
(+178 files in other folders)
