[project]
name = "vip-smur-wiki"
version = "0.1.0"
description = "Wiki for VIP-SMUR"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocs-multirepo-plugin>=0.8.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2.0",
    "mkdocs-minify-plugin>=0.7.0",
    "mkdocs-git-authors-plugin>=0.7.0",
    "mkdocs-git-committers-plugin-2>=0.5.0",
    "mkdocs-title-casing-plugin>=0.1.0",
    "mkdocs-glightbox>=0.3.0",
    "markdown-include>=0.8.0",
    "mkdocs-include-markdown-plugin>=6.0.0",
    "mkdocs-rss-plugin>=1.8.0",
    "mkdocs-redirects>=1.2.0",
    "mkdocs-video>=1.5.0",
    "mkdocs-awesome-pages-plugin>=2.9.0",
    "mkdocs-bibtex>=2.11.0",
    "tzdata>=2023.3",
    "pillow>=10.0.0",
    "cairosvg>=2.7.0",
]
